--- a/AUTHORS
+++ b/AUTHORS
@@ -4,4 +4,5 @@
 Oluwaseyi Egunjobi <seyistry@gmail.com>
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com> 
+Joann Vuong <130@holbertonschool.com>
+Gift Victor <giftvictor1212@gmail.com> 
